--- a/stacks_pihole.yaml
+++ b/stacks_pihole.yaml
@@ -8,7 +8,7 @@ services:
      - 127.0.0.1
      - 208.67.222.222
     environment:
-      TZ: 'AT'
+      TZ: 'Europe/Vienna'
       WEBPASSWORD: 'password'
       ServerIP: 192.168.0.80
       VIRTUAL_HOST: pi.hole
