--- a/stacks_pihole.yaml
+++ b/stacks_pihole.yaml
@@ -1,20 +1,22 @@
+version: "3"
 # More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
 services:
   pihole:
     container_name: pihole
     image: pihole/pihole:latest
-    network_mode: "host"
+    network_mode: host # DHCP-Server
     dns:
-     - 127.0.0.1
-     - 208.67.222.222
+      - 127.0.0.1
+      - 208.67.222.222
     environment:
-      TZ: 'Europe/Vienna'
-      WEBPASSWORD: 'password'
-      ServerIP: 192.168.0.80
-      VIRTUAL_HOST: pi.hole
+      TZ: Europe/Vienna
+      WEBPASSWORD: password
+      FTLCONF_LOCAL_IPV4: 192.168.0.80
+      VIRTUAL_HOST: pihole.lan
     volumes:
       - /home/docker-volumes/pihole/etc-pihole:/etc/pihole
       - /home/docker-volumes/pihole/etc-dnsmasq.d:/etc/dnsmasq.d
     cap_add:
-      - NET_ADMIN
+      - NET_ADMIN # DHCP-Server
     restart: unless-stopped
+networks: {}
