--- a/stack_piholeV6.yaml
+++ b/stack_piholeV6.yaml
@@ -1,37 +1,18 @@
 services:
-# More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
+  # More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
   pihole:
     container_name: piholeV6
     image: pihole/pihole:latest
     network_mode: host # DHCP-Server
-    ports:
-      # DNS Ports
-      - "53:53/tcp"
-      - "53:53/udp"
-      # Default HTTP Port
-      - "80:80/tcp"
-      # Default HTTPs Port. FTL will generate a self-signed certificate
-      - "443:443/tcp"
-      # Uncomment the below if using Pi-hole as your DHCP Server
-      - "67:67/udp"
     environment:
-      # Set the appropriate timezone for your location (https://en.wikipedia.org/wiki/List_of_tz_database_time_zones), e.g:
-      TZ: 'Europe/Vienna'
-      # Set a password to access the web interface. Not setting one will result in a random password being assigned
-      FTLCONF_webserver_api_password: 'password'
-    # Volumes store your data between container upgrades
+      TZ: Europe/Vienna
+      FTLCONF_webserver_api_password: passwort
+      FTLCONF_dns_upstreams: 193.110.81.0;185.253.5.0
     volumes:
-      # For persisting Pi-hole's databases and common configuration file
-      - 'mnt/nvme/docker/volumes/pihole/etc-pihole:/etc/pihole'
+      - /mnt/nvme/docker/volumes/pihole/etc-pihole:/etc/pihole
     cap_add:
-      # See https://github.com/pi-hole/docker-pi-hole#note-on-capabilities
-      # Required if you are using Pi-hole as your DHCP server, else not needed
-      - NET_ADMIN
-      # Required if you are using Pi-hole as your NTP client to be able to set the host's system time
-      - SYS_TIME
-      # Optional, if Pi-hole should get some more processing time
+      - NET_ADMIN #DHCP-Server
+      - SYS_TIME #NTP-Client
       - SYS_NICE
-    restart: unless-stopped
-      - NET_ADMIN # DHCP-Server
     restart: unless-stopped
 networks: {}
